assets/css/screen.css
/* ... */
.has-typographic-feed .gh-card {
  margin-top: clamp(8rem, 6rem + 6.25vw, 16rem);
}

.has-typographic-feed .gh-card-title {
  max-width: 1200px;
  font-size: clamp(3.2rem, 2.4rem + 2.5vw, 6.4rem);
  line-height: 1.1;
}

.has-typographic-feed .gh-card-excerpt {
  max-width: 920px;
  margin-top: 16px;
  font-size: clamp(1.8rem, 0.27vw + 1.67rem, 2.1rem);
  font-weight: 450;
  line-height: 1.5;
  letter-spacing: -0.005em;
}

.has-serif-font.has-typographic-feed:not([class*=" gh-font-heading"]):not(
    [class^="gh-font-heading"]
  ):not([class*=" gh-font-body"]):not([class^="gh-font-body"])
  .gh-card-excerpt {
  font-family: var(--gh-font-body, var(--font-serif));
}

.has-mono-font.has-typographic-feed:not([class*=" gh-font-heading"]):not(
    [class^="gh-font-heading"]
  ):not([class*=" gh-font-body"]):not([class^="gh-font-body"])
  .gh-card-excerpt {
  font-family: var(--gh-font-body, var(--font-mono));
}

.has-typographic-feed .gh-card-meta {
  margin-top: 16px;
}

/* Parallax feed
/* ---------------------------------------------------------- */

.has-parallax-feed .gh-card {
  display: flex;
  min-height: 640px;
}

.has-parallax-feed .gh-card.no-image {
  background-color: var(--tag-color, var(--color-darker-gray));
}

.has-parallax-feed .kg-width-full .gh-card {
  min-height: 800px;
}

.has-parallax-feed .gh-card + .gh-card {
  margin-top: 80px;
}

.has-parallax-feed .gh-card-link {
  position: relative;
  display: flex;
  flex-grow: 1;
}

.has-parallax-feed .gh-card:not(.no-image) .gh-card-link::before {
  position: absolute;
  width: 100%;
  height: 100%;
  content: "";
  background-color: #000;
  opacity: 0.6;
  transition: opacity 0.4s;
}

.has-parallax-feed .gh-card:not(.no-image):hover .gh-card-link::before {
  opacity: 0.4;
}

.has-parallax-feed .gh-card-image {
  position: absolute;
  z-index: -1;
  width: 100%;
  height: 100%;
}

.has-parallax-feed .gh-card-wrapper {
  position: relative;
  justify-content: flex-end;
  padding: 64px 48px;
}

.has-parallax-feed .kg-width-full .gh-card-wrapper {
  padding: 64px 48px;
}

.has-parallax-feed :is(.gh-card-title, .gh-card-meta) {
  color: #fff;
}

.has-parallax-feed .gh-card-title {
  font-size: clamp(3.2rem, 2.4rem + 2.5vw, 6.4rem);
  line-height: 1.1;
}

.has-parallax-feed .gh-card:not(.no-image) .gh-card-link:hover .gh-card-title {
  opacity: 1;
}

.has-parallax-feed .kg-width-full .gh-card-title {
  font-size: 6.4rem;
}

.has-parallax-feed .gh-card-meta {
  margin-top: 12px;
}

/* Article
/* ---------------------------------------------------------- */

.gh-content.gh-canvas {
  width: 960px;
  display: flex !important;
  flex-direction: column;
}

.gh-article-meta {
  /* top: 0; */
  /* bottom: 0; */
  /* z-index: 10; */
  grid-row-start: 1;
  width: 100%;
  /* margin: 0 !important; */
  display: flex;
}

.gh-article-meta-inner {
  /* position: sticky; */
  /* top: 48px; */
  display: flex;
  gap: 2rem;
  align-items: center;
  /* flex-direction: column; */
}

.gh-article-meta .gh-author-image-list {
  display: flex;
  margin-bottom: 12px;
  margin-left: -2px;
}

.gh-article-meta .gh-author-image {
  display: block;
  width: 72px;
  height: 72px;
  margin-bottom: 0;
  border: 2px solid var(--color-white);
}

.gh-article-meta .gh-author-icon {
  background-color: var(--color-light-gray);
}

.gh-article-meta .gh-author-image:hover {
  opacity: 1;
}

.gh-article-meta .gh-author-image-list .gh-author-image + .gh-author-image {
  margin-left: -20px;
}

.gh-article-meta .gh-author-image-list .gh-author-image:nth-child(1) {
  z-index: 30;
}

.gh-article-meta .gh-author-image-list .gh-author-image:nth-child(2) {
  z-index: 20;
}

.gh-article-meta .gh-author-image-list .gh-author-image:nth-child(3) {
  z-index: 10;
}

.gh-author-name-list a {
  border-bottom: none;
}

.gh-article-meta .gh-author-name-list {
  margin-bottom: -2px;
  line-height: 1.35;
}

.gh-article-meta .gh-author-name-list a {
  font-size: 1.9rem;
  font-weight: 700;
  letter-spacing: -0.01em;
  text-decoration: none;
  color: var(--color-darker-gray);
}

.gh-article-date {
  font-size: 1.5rem;
  font-weight: 700;
  color: var(--color-darker-gray);
  /* margin-top: 4px; */
  /* font-size: 1.4rem; */
  /* color: var(--color-secondary-text); */
}

.gh-article-tag-list {
  display: flex;
  gap: 1rem;
  align-items: center;
}

.gh-article-tag {
  display: inline-block;
  width: fit-content;
  padding: 2px 12px;
  /* margin-top: 20px; */
  font-size: 1.5rem;
  font-weight: 700;
  color: var(--tag-color, var(--color-darker-gray)) !important;
  text-decoration: none !important;
  letter-spacing: -0.01em;
  border: 2px solid var(--color-border);
  border-radius: 24px;
}

/* .gh-content .gh-article-header {
  grid-row-start: 1;
  grid-column: 4 / span 9;
  margin-top: 0;
  margin-bottom: clamp(4.8rem, 1.43vw + 4.11rem, 6.4rem);
} */

.gh-article-title {
  grid-column: 1 / span 9;
  font-size: clamp(4rem, 2.86vw + 2.63rem, 7.2rem);
  font-weight: 700;
  line-height: 1;
  letter-spacing: -0.03em;
}

.has-serif-font:not([class*=" gh-font-heading"]):not(
    [class^="gh-font-heading"]
  ):not([class*=" gh-font-body"]):not([class^="gh-font-body"])
  .gh-article-title {
  font-family: var(--gh-font-heading, var(--font-serif));
}

.has-mono-font:not([class*=" gh-font-heading"]):not(
    [class^="gh-font-heading"]
  ):not([class*=" gh-font-body"]):not([class^="gh-font-body"])
  .gh-article-title {
  font-family: var(--gh-font-heading, var(--font-mono));
}

.gh-article-excerpt {
  grid-column: 1 / span 9;
  max-width: 840px;
  font-size: clamp(1.8rem, 0.54vw + 1.54rem, 2.4rem);
  font-weight: 500;
  line-height: 1.45;
}

.has-serif-font:not([class*=" gh-font-heading"]):not(
    [class^="gh-font-heading"]
  ):not([class*=" gh-font-body"]):not([class^="gh-font-body"])
  .gh-article-excerpt {
  font-family: var(--gh-font-body, var(--font-serif));
}
/* ... */

